# gnucap

./: .gitignore  AUTHORS  CODE_OF_CONDUCT  CONTRIBUTE  INSTALL  INSTALL.old  Make3  MakeList  Makefile  Makefile.am  Makefile.in  Makefile.template  NEWS  README  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  configure.old  gnucap-conf.in  makefile.in
apps/: Make.depend  Make1  Make2.Debug  Make2.g++  Make2.mingw32  MakeList  bm_complex.cc  bm_exp.cc  bm_fit.cc  bm_generator.cc  bm_model.cc  bm_poly.cc  bm_posy.cc  bm_pulse.cc  bm_pwl.cc  bm_sffm.cc  bm_sin.cc  bm_tanh.cc  bmm_semi.cc  bmm_table.cc  c_clear.cc  c_comand.cc  c_delete.cc  c_exp.cc  c_genrat.cc  c_help.cc  c_list.cc  c_measure.cc  c_modify.cc  c_param.cc  c_prbcmd.cc  c_sim.cc  c_status.cc  c_sweep.cc  c_system.cc  configure  configure.old  d_admit.cc  d_bjt.model  d_cap.cc  (+52 more)
conf/: Make1  MakeList  config.h.in  configure  gnucap-conf.in
doc/: INSTALL  Makefile.am  Makefile.in  acs-tutorial  gnucap-ibis.1  gnucap.1  history  relnotes.029  relnotes.030  relnotes.031  relnotes.032  relnotes.033  relnotes.034  relnotes.035  whatisit
examples/: Makefile.am  Makefile.in  README  eq.doc  eq2-145.ckt  eq2-289.ckt  eq2-577.ckt  eq4-2305.ckt  eq4-4609.ckt  eq4-6913.ckt  eq4-9217.ckt  eq4-9217.tran-slow.ckt  eq4-9217.tran.ckt  eq5-.ac.ckt  eq5-.tran.ckt  eq5-.tran.euler.fast.ckt  eq5-.tran.fast.ckt  eq5-.tran.like-spice.ckt  eq5-.tran.slow.ckt  eq5-.tran.vfast.ckt  eq5-.tran.vvfast.ckt  eq5-.tran.vvvfast.ckt  eq6-.tran.vvvfast.ckt  eq7-.tran.default.ckt  eq7-.tran.nobypass.ckt  eq7-.tran.nofbbypass.ckt  eq7-.tran.noincmode.ckt  eq7-.tran.nolcbypass.ckt  eq7-.tran.nolubypass.ckt  eq7-.tran.notraceload.ckt  eq7-.tran.slow.ckt  eq7-.tran.spice-accurate.ckt  eq7-.tran.vvvfast.ckt  eqboost.ckt  eqflat.ckt  eqmodify.ckt  killzap.ckt  killzap.doc  nmos.doc  nmos15.ckt  (+10 more)
ibis/: Make.aux  Make.depend  Make1  Make2.Debug  Make2.g++  Make3  ap.h  ap_convert.cc  ap_skip.cc  base-dump.cc  base-in.cc  base-math.cc  base.h  comp-dump.cc  comp-in.cc  comp-net.cc  comp.h  constant.h  ebd-dump.cc  ebd-in.cc  ebd-net.cc  ebd.h  error-in.cc  expression-dump.cc  expression-in.cc  expression-reduce.cc  expression.h  file-dump.cc  file-in.cc  file-net.cc  file.h  ibis.4.0.ibisx-base  instance-dump.cc  instance-in.cc  instance-net.cc  instance.h  (+22 more)
man/: Makefile  Makefile.am  Makefile.in  Makefile.template  README  addmodel.tex  behavior.tex  circuit.tex  commands.tex  configure.old  gnucap-man.ind  gnucap-man.tex  gnucap-modelgen.1  gnucap.1  install.tex  man.tex  start.tex  tech.tex  title.tex
man/Addmodel/: Makefile.am  Makefile.in  addmodel-base.tex  addmodel-compile.tex  addmodel.tex
man/Behavior/: Makefile.am  Makefile.in  complex.tex  conditional.tex  exp.tex  fit.tex  functions.tex  generator.tex  language.tex  poly.tex  posy.tex  proto.tex  pulse.tex  pwl.tex  sffm.tex  sin.tex  table.tex  tanh.tex
man/Circuit/: 0summary.tex  Makefile.am  Makefile.in  c.tex  d.tex  e.tex  f.tex  g.tex  h.tex  i.tex  ibis.tex  j.tex  k.tex  l.tex  m.tex  q.tex  r.tex  s.tex  t.tex  tcap.tex  u.tex  v.tex  vccap.tex  vcg.tex  vcr.tex  w.tex  x.tex  y.tex
man/Commands/: 0summary.tex  1shell.tex  2batch.tex  3outfile.tex  Makefile.am  Makefile.in  ac.tex  alarm.tex  alter.tex  build.tex  chdir.tex  clear.tex  dc.tex  delete.tex  disto.tex  edit.tex  end.tex  exit.tex  fanout.tex  fault.tex  fourier.tex  generato.tex  get.tex  ic.tex  include.tex  insert.tex  list.tex  log.tex  mark.tex  merge.tex  modify.tex  nodeset.tex  noise.tex  op.tex  options.tex  param.tex  pause.tex  plot.tex  print.tex  quit.tex  (+12 more)
man/Tech/: Makefile.am  Makefile.in  architecture.tex  ds_parts-list.tex  methods.tex  performance.tex  tr_basic.tex  tr_cpoly.tex  tr_step-control.tex
man/html/: gnucap-man.hidx  gnucap-man.hind  gnucap-man001.html  gnucap-man002.html  gnucap-man003.html  gnucap-man004.html  gnucap-man005.html  gnucap-man006.html  gnucap-man007.html  gnucap-man008.html  gnucap-man009.html  gnucap-man010.html  gnucap-man011.html  gnucap-man012.html  gnucap-man013.html  gnucap-man014.html  gnucap-man015.html  gnucap-man016.html  gnucap-man017.html  gnucap-man018.html  gnucap-man019.html  gnucap-man020.html  gnucap-man021.html  gnucap-man022.html  gnucap-man023.html  gnucap-man024.html  gnucap-man025.html  gnucap-man026.html  gnucap-man027.html  gnucap-man028.html  gnucap-man029.html  gnucap-man030.html  gnucap-man031.html  gnucap-man032.html  gnucap-man033.html  gnucap-man034.html  gnucap-man035.html  gnucap-man036.html  gnucap-man037.html  gnucap-man038.html  (+73 more)
man/man/: .listing  images.pl  images.tex,v  index.html  labels.pl  man.html  node1.html  node10.html  node100.html  node101.html  node102.html  node103.html  node104.html  node105.html  node106.html  node107.html  node108.html  node109.html  node11.html  node110.html  node111.html  node112.html  node12.html  node13.html  node14.html  node15.html  node16.html  node17.html  node18.html  node19.html  node2.html  node20.html  node21.html  node22.html  node23.html  node24.html  node25.html  node26.html  node27.html  node28.html  (+78 more)
modelgen/: Make.aux  Make.depend  Make1  Make2.Debug  Make2.g++  Make2.mingw32  Make3  MakeList  Makefile.am  Makefile.in  Makefile.template  ap.h  ap_construct.cc  ap_error.cc  ap_get.cc  ap_match.cc  ap_skip.cc  configure  configure.old  declare.h  gnucap-modelgen  io.cc  io_.h  io_error.h  io_trace.h  l_lib.h  md.h  mg_.h  mg_error.cc  mg_in.cc  mg_main.cc  mg_out.h  mg_out_common.cc  mg_out_dev.cc  mg_out_dump.cc  mg_out_h.cc  mg_out_lib.cc  mg_out_model.cc  mg_out_root.cc  patchlev.h  (+2 more)
src/: Make.aux  Make.ccflags  Make.depend  Make.libs  Make.sys  Make1  Make2.Borland  Make2.CC  Make2.Debug  Make2.g++  Make2.g++~  Make2.mingw32  Make2.sun-CC  Make3  Makefile  Makefile.am  Makefile.in  Makefile.template  ap.h  ap_construct.cc  ap_convert.cc  ap_error.cc  ap_get.cc  ap_match.cc  ap_skip.cc  bm.cc  bm.h  bm_complex.cc  bm_cond.cc  bm_exp.cc  bm_fit.cc  bm_generator.cc  bm_model.cc  bm_poly.cc  bm_posy.cc  bm_pulse.cc  bm_pwl.cc  bm_sffm.cc  bm_sin.cc  bm_tanh.cc  (+230 more)
(+1917 files in other folders)
