## $Id$
##

pkgexamplesdir=	${pkgdatadir}/examples
dist_pkgexamples_DATA= ${EXFILES}

EXFILES= \
 eq2-145.ckt eq2-289.ckt eq2-577.ckt eq3-1153.ckt eq4-2305.ckt \
 eq4-4609.ckt eq4-6913.ckt eq4-9217.ckt eq4-9217.tran.ckt \
 eq4-9217.tran-slow.ckt eq5-.tran.ckt eq5-.tran.fast.ckt \
 eq5-.tran.like-spice.ckt eq5-.tran.slow.ckt eq5-.tran.vfast.ckt \
 eq5-.tran.vvfast.ckt eqboost.ckt eq.doc eqflat.ckt eqmodify.ckt \
 eq5-.ac.ckt eq5-.tran.vvvfast.ckt eq5-.tran.euler.fast.ckt \
 killzap.ckt killzap.doc nmos100.ckt nmos15.ckt nmos18.ckt nmos30.ckt \
 nmos.doc nmosgen.c nmp100.ckt nmpgen.c opamp.doc opamp-ol.ckt opamp-vf.ckt \
 README runall runall.out sc18.ckt 
