## $Id$
##

pkgexamplesdir=	${pkgdatadir}/examples
dist_pkgexamples_DATA= ${EXFILES}

##EXFILES= *.c *.doc *.ckt runall runall.out

EXFILES= \
eq.doc eq2-145.ckt eq2-289.ckt eq2-577.ckt eq3-1153.ckt eq4-2305.ckt \
eq4-4609.ckt eq4-6913.ckt eq4-9217.ckt eq4-9217.tran-slow.ckt \
eq4-9217.tran.ckt eq5-.ac.ckt eq5-.tran.ckt eq5-.tran.euler.fast.ckt \
eq5-.tran.fast.ckt eq5-.tran.like-spice.ckt eq5-.tran.slow.ckt \
eq5-.tran.vfast.ckt eq5-.tran.vvfast.ckt eq5-.tran.vvvfast.ckt \
eq6-.tran.vvvfast.ckt eq7-.tran.vvvfast.ckt eqboost.ckt eqflat.ckt \
eqmodify.ckt killzap.ckt killzap.doc nmos.doc nmos100.ckt nmos15.ckt \
nmos18.ckt nmos30.ckt nmosgen.c nmp100.ckt nmpgen.c opamp-ol.ckt \
opamp-vf.ckt opamp.doc runall runall.out sc18.ckt
