## -*- Automake -*-
##
## $Id: Makefile.am,v 25.95 2006/08/26 01:23:57 al Exp $
##
##                            COPYRIGHT
##
## This file is part of "Gnucap", the Gnu Circuit Analysis Package
##
##  Copyright (C) 2005 Dan McMahill
##
##  This program is free software; you can redistribute it and/or modify
##  it under the terms of the GNU General Public License as published by
##  the Free Software Foundation; either version 2 of the License, or
##  (at your option) any later version.
##
##  This program is distributed in the hope that it will be useful,
##  but WITHOUT ANY WARRANTY; without even the implied warranty of
##  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
##  GNU General Public License for more details.
##
##  You should have received a copy of the GNU General Public License
##  along with this program; if not, write to the Free Software
##  Foundation, Inc.,  51 Franklin Street, Fifth Floor, Boston, MA
##  02110-1301, USA.

bin_PROGRAMS= gnucap

# globals.cc should be listed first as it must be linked before
# any files which have a static object with a constructor that
# relates to the netlist.

gnucap_SOURCES= globals.cc \
 ap_construct.cc ap_convert.cc ap_error.cc ap_get.cc ap_match.cc ap.h \
 m_cpoly.h m_divdiff.h m_interp.h m_matrix.h m_spline.h ap_skip.cc bm.cc \
 bm_complex.cc bm_cond.cc bm_exp.cc bm_fit.cc bm_generator.cc bm.h \
 bmm_table.h bmm_semi.h bm_model.cc bm_poly.cc bm_posy.cc bm_pulse.cc \
 bm_pwl.cc bmm_table.cc bmm_semi.cc bm_sffm.cc bm_sin.cc bm_tanh.cc \
 bm_value.cc c__cmd.cc c_comand.cc c_delete.cc c_comand.h \
 c_nodset.h patchlev.h c_fanout.cc c_file.cc c_genrat.cc c_getckt.cc \
 c_list.cc c_modify.cc c_nodset.cc c_param.cc c_prbcmd.cc \
 c_status.cc c_sweep.cc c_sim.cc \
 c_system.cc main.cc d_admit.cc d_cap.cc d_cccs.cc d_ccvs.cc d_coil.cc \
 d_coment.cc d_admit.h d_cap.h d_cccs.h d_ccvs.h d_coil.h d_coment.h d_cs.cc \
 d_dot.cc d_logic.cc d_logicmod.cc d_cs.h d_dot.h d_logic.h d_res.cc \
 d_subckt.cc d_switch.cc d_trln.cc d_res.h d_subckt.h d_switch.h d_trln.h \
 d_vcr.cc d_vcvs.cc d_vs.cc d_vcr.h d_vcvs.h d_vs.h e_base.cc e_node.cc \
 e_cardlist.cc e_card.cc e_model.cc e_base.h e_node.h e_aux.h \
 e_cardlist.h e_card.h e_model.h e_compon.cc e_elemnt.cc e_ccsrc.cc \
 e_storag.cc e_compon.h e_subckt.h e_subckt.cc e_elemnt.h e_ccsrc.h e_storag.h \
 findbr.cc io.cc io_contr.cc io_error.cc io_findf.cc io_getln.cc io_out.cc \
 l_compar.h l_denoise.h l_jmpbuf.h l_lib.h l_stlextra.h l_timer.h l_ftos.cc \
 l_timer.cc l_trim.cc io_xopen.cc l_pmatch.cc l_wmatch.cc md.cc \
 u_opt1.cc u_opt2.cc md.h io_.h io_error.h io_trace.h u_opt.h mode.h \
 constant.h declare.h m_fft.cc m_spline.cc plot.cc s_ac.cc \
 s_ac_set.cc s_ac_slv.cc s_ac_swp.cc s__.cc s__aux.cc s__init.cc s__map.cc \
 s__out.cc s__solve.cc s_dc.cc s_dc_set.cc s_dc_swp.cc s_fo.cc s_fo_out.cc \
 s_fo_set.cc s__.h u_status.h s_ac.h s_dc.h s_fo.h s_tr.h s_tr.cc s_tr_rev.cc \
 s_tr_set.cc s_tr_swp.cc u_cardst.h u_limit.h m_wave.h u_nodemap.cc u_sdp.cc \
 u_prblst.cc u_probe.cc u_xprobe.cc u_nodemap.h u_sdp.h u_prblst.h \
 u_probe.h u_xprobe.h u_parameter.h u_parameter.cc

## The modelgen built sources go here because we don't want them to
## go in the distfile (hence the nodist_).
nodist_gnucap_SOURCES= ${MODELSRCS}

## This is needed because c_getckt.o depends on the headers generated by
## modelgen.
c_getckt.${OBJEXT}: ${MODELSRCS}

## The .model files for modelgen

MODELS= \
 d_bjt.model d_diode.model d_mos123.model d_mos1.model d_mos2.model \
 d_mos3.model d_mos4.model d_mos5.model d_mos6.model d_mos7.model \
 d_mos8.model d_mos_base.model d_mos.model 

## Include the .model files in the distfile

EXTRA_DIST= ${MODELS} \
 Make1 Make3 Make.depend Make2.g++ Make2.Debug Make2.mingw32 \
 Makefile.template configure.old test_readline.cc

## The modelgen generated files
MODELSRCS= ${MODELS:.model=.cc} ${MODELS:.model=.h}

### Clean out the modelgen generated files
CLEANFILES= ${MODELSRCS}

## Suffix rules for modelgen.
##

SUFFIXES= .model
MODELGEN= @MODELGEN@

%.cc : %.model %.h ${MODELGEN}
	${MODELGEN} -cc $<

%.h : %.model ${MODELGEN}
	${MODELGEN} -h $<

