## $Id$
##

EXTRA_DIST= ${TEXSRCS}

TEXSRCS= \
 0summary.tex 1shell.tex 2batch.tex 3outfile.tex ac.tex alarm.tex alter.tex \
 build.tex chdir.tex clear.tex dc.tex delete.tex disto.tex edit.tex end.tex \
 exit.tex fanout.tex fault.tex fourier.tex generato.tex get.tex \
 ic.tex include.tex list.tex log.tex mark.tex merge.tex \
 modify.tex nodeset.tex noise.tex op.tex options.tex param.tex pause.tex \
 plot.tex print.tex quit.tex save.tex sens.tex set.tex status.tex sweep.tex \
 temp.tex tf.tex title.tex transient.tex unfault.tex unmark.tex width.tex 
